--- a/nginx.conf
+++ b/nginx.conf
@@ -47,16 +47,35 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
 
-        # Cache static assets
-        location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
+        # Cache static assets (hashed JS/CSS chunks)
+        location ~* \.(jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
+        }
+
+        # Cache hashed JS/CSS bundles (but not index.html)
+        location ~* ^/assets/.*\.(js|css)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
+        # Never cache index.html
+        location = /index.html {
+            add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+            add_header Pragma "no-cache";
+            expires off;
+            etag off;
+            if_modified_since off;
         }
 
         # React Router - redirect all requests to index.html
         location / {
             try_files $uri $uri/ /index.html;
-            add_header Cache-Control "no-cache";
+            # HTML responses (SPA fallback) must not be cached
+            add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+            add_header Pragma "no-cache";
+            etag off;
+            if_modified_since off;
         }
 
         # API proxy (optional - if backend is in same network)
