--- a/docker-compose.phase1.yml
+++ b/docker-compose.phase1.yml
@@ -20,7 +20,13 @@ services:
     container_name: qr_frontend_phase1
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:80/health"]
+      test: ["CMD", "wget", "-q", "-O", "/dev/null", "http://127.0.0.1:80/health"]
       interval: 30s
       timeout: 10s
       retries: 3
+    networks:
+      - dokploy-network
+
+networks:
+  dokploy-network:
+    external: true
