chore: rebrand Scanly to ScanWyse (all frontend references)

--- a/.env.production
+++ b/.env.production
@@ -6,7 +6,7 @@
 # ====================================
 
 # Backend API URL (your backend nginx gateway)
-VITE_API_URL=http://api-scanly.duckdns.org
+VITE_API_URL=http://api-scanwyse.duckdns.org
 
 # Frontend URL (this frontend's public domain)
-VITE_FRONTEND_URL=http://scanly.duckdns.org
+VITE_FRONTEND_URL=http://scanwyse.duckdns.org
