--- a/docker-compose.phase1.yml
+++ b/docker-compose.phase1.yml
@@ -4,8 +4,8 @@ version: "3.9"
 # FRONTEND - Phase 1 Dokploy Deployment
 # ========================================
 # Standalone frontend service for Dokploy.
-# Traefik routes scanly.duckdns.org → this container.
-# API calls go to api-scanly.duckdns.org (backend).
+# Traefik routes scanwyse.duckdns.org → this container.
+# API calls go to api-scanwyse.duckdns.org (backend).
 # ========================================
 
 services:
@@ -14,8 +14,8 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        VITE_API_URL: ${VITE_API_URL:-http://api-scanly.duckdns.org}
-        VITE_FRONTEND_URL: ${VITE_FRONTEND_URL:-http://scanly.duckdns.org}
+        VITE_API_URL: ${VITE_API_URL:-http://api-scanwyse.duckdns.org}
+        VITE_FRONTEND_URL: ${VITE_FRONTEND_URL:-http://scanwyse.duckdns.org}
     image: qr-frontend-phase1:latest
     container_name: qr_frontend_phase1
     restart: unless-stopped
